--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -140,7 +140,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link>Activities</button>
           </li>
 
           <li class="navbar-item">
@@ -600,13 +600,13 @@
 
 
       <!--
-        - #PORTFOLIO
+        - #Activities
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="activities" data-page="activities">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Activities</h2>
         </header>
 
         <section class="projects">
@@ -614,8 +614,9 @@
           <ul class="filter-list">
 
             <li class="filter-item">
-              <button class="active" data-filter-btn>All</button>
+              <button class="active" data-filter-btn>Interests</button>
             </li>
+            <!--
 
             <li class="filter-item">
               <button data-filter-btn>Web design</button>
@@ -628,9 +629,9 @@
             <li class="filter-item">
               <button data-filter-btn>Web development</button>
             </li>
-
+            -->
           </ul>
-
+        
           <div class="filter-select-box">
 
             <button class="filter-select" data-select>
@@ -678,12 +679,12 @@
                   <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
-
-                <p class="project-category">Web development</p>
+                <h3 class="project-title">Math</h3>
+                <!--
+                  <p class="project-category">Web development</p>
+                -->
 
               </a>
-            </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
@@ -696,10 +697,10 @@
                   <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
-
-                <p class="project-category">Web development</p>
-
+                <h3 class="project-title">Science</h3>
+                <!--
+                  <p class="project-category">Web development</p>
+                -->
               </a>
             </li>
 
@@ -714,9 +715,10 @@
                   <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
-
-                <p class="project-category">Web design</p>
+                <h3 class="project-title">Swimming</h3>
+                <!--
+                  <p class="project-category">Web design</p>
+                -->
 
               </a>
             </li>
@@ -732,9 +734,11 @@
                   <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
-
-                <p class="project-category">Applications</p>
+                <h3 class="project-title">Basketball</h3>
+                <!--
+                  <p class="project-category">Applications</p>
+                -->
+                
 
               </a>
             </li>
@@ -750,9 +754,10 @@
                   <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DSM.</h3>
-
-                <p class="project-category">Web design</p>
+                <h3 class="project-title">Tennis</h3>
+                <!--
+                  <p class="project-category">Web design</p>
+                -->
 
               </a>
             </li>
@@ -768,9 +773,10 @@
                   <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">MetaSpark</h3>
-
-                <p class="project-category">Web design</p>
+                <h3 class="project-title">Violin</h3>
+                <!--
+                  <p class="project-category">Web design</p>
+                -->
 
               </a>
             </li>
@@ -786,9 +792,10 @@
                   <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Summary</h3>
-
-                <p class="project-category">Web development</p>
+                <h3 class="project-title">Community Service</h3>
+                <!--
+                  <p class="project-category">Web development</p>
+                -->
 
               </a>
             </li>
@@ -804,9 +811,10 @@
                   <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager</h3>
-
-                <p class="project-category">Applications</p>
+                <h3 class="project-title">Chess</h3>
+                <!--
+                  <p class="project-category">Applications</p>
+                -->
 
               </a>
             </li>
@@ -822,9 +830,10 @@
                   <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Arrival</h3>
-
-                <p class="project-category">Web development</p>
+                <h3 class="project-title">Stocks</h3>
+                <!--
+                  <p class="project-category">Web development</p>
+                -->
 
               </a>
             </li>
