--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
                   <video width="320" height="240"  controls>
                     <source src="./assets/images/Activities/Performing Arts/Cjs Concert 2.mp4" type="video/mp4">
                  </video>
-                <h3 class="project-title">Violin</h3>
+                <h3 class="project-title">Violin - Cincinnati Junior String Concert</h3>
                 <!--
                   <p class="project-category">Web design</p>
                 -->
@@ -903,7 +903,7 @@
                   <video width="320" height="240"  controls>
                     <source src="./assets/images/Activities/Performing Arts/Violin Solo.mp4" type="video/mp4">
                  </video>
-                <h3 class="project-title">Violin</h3>
+                <h3 class="project-title">Violin - Community</h3>
                 <!--
                   <p class="project-category">Web design</p>
                 -->
