--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <h4 class="h4 service-item-title">Academics</h4>
 
                 <p class="service-item-text">
-                  I do Mathcounts and Science Bowl, and I qualified for state in Mathcounts. 
+                  I am an active participant in both Mathcounts and Science Bowl, having achieved qualification for the state level in Mathcounts.
                 </p>
               </div>
 
