--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Music</h4>
+                <h4 class="h4 service-item-title">Performing Arts</h4>
 
                 <p class="service-item-text">
                   I play the violin, and I am in the Cincinnati Junior Strings Orchestra
@@ -249,7 +249,7 @@
                 <h4 class="h4 service-item-title">Community Service</h4>
 
                 <p class="service-item-text">
-                  I initated the event "Swim With a Splash", where we taught kids to swim and corrected their techniques.
+                  I love to give back to the community, and I've been part of many projects, such as: Swim with a Splash, Cincinnati AACO Youth Member International Food Drive, music events at senior centers and hospitals, and I also designed a video for the nonprofit EMBRACE, a 501(c)(3), to teach Asian immigrants English and how to adapt to their lives in the U.S
                 </p>
               </div>
 
@@ -288,6 +288,25 @@
                     I held a free “Swim with a Splash” event for my community because I had drastically improved in swimming, and 
                     I wanted to help other kids become better too.There were many details I had to coordinate. I recruited a few peers to teach and assigned specific roles to avoid conflicts. Using Canva, I created a flyer for our community bulletin board and Facebook and also advertised by word of mouth. Using the information the parents had given to me on a Google form, I made individual lesson plans for each swimmer and assigned them to a coach according to the coach's strengths. We taught eleven kids over three days, confidently giving parents feedback after each lesson. The classes weren't easy, especially since one student was scared of water. It took two days to get him comfortable being in the pool, but he learned how to hold his breath underwater, which was a huge accomplishment. Later, his mom said that he now likes swimming and wants to take more lessons.
                   
+                  </p>
+                </div>
+
+              </div>
+            </li>
+
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
+
+                <figure class="testimonials-avatar-box">
+                  <img src="./assets/images/violin.jpg" alt="Henry william" width="60" height="60" data-testimonials-avatar>
+                </figure>
+
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Violin</h4>
+
+                <div class="testimonials-text" data-testimonials-text>
+                  <p>
+                    I've been playing violin since I was 6, and I enjoy being a member of an orchestra. I was selected twice for the OMEA District 13 Honor Orchestra, and made the 
+                    Cincinnati Junior Strings Orchestra this year. I also am a part of my school's orchestra, where I am playing in an 8th grade class, even though I am in 7th grade.
                   </p>
                 </div>
 
@@ -396,32 +415,7 @@
                 </div>
 
               </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/violin.jpg" alt="Henry william" width="60" height="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Violin</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    
-                  Starting violin at the age of 5, I faced challenges due to physical limitations, including being double-jointed in 
-                  every finger and having a curved pinky. A renowned violin teacher suggested switching instruments, but my love for the 
-                  violin prevailed. Juggling various activities like basketball, swimming, tennis, and math alongside violin, I 
-                  persevered. Despite initial setbacks, another teacher recognized my determination and offered guidance. With rigorous 
-                  practice, dedicating over 2 hours daily for a month, I successfully auditioned for the Cincinnati Junior Strings 
-                  Orchestra. This experience taught me the importance of commitment and pursuing one's passion relentlessly. I am proud 
-                  of overcoming obstacles and achieving my goal in the orchestra.
-                  </p>
-                </div>
-
-              </div>
-            </li>
+            </li>         
 
           </ul>
 
