--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <h4 class="h4 service-item-title">Community Service</h4>
 
                 <p class="service-item-text">
-                  I love to give back to the community, and I've been part of many projects, such as: Swim with a Splash, Cincinnati AACO Youth Member International Food Drive, music events at senior centers and hospitals, and I also designed a video for the nonprofit EMBRACE, a 501(c)(3), to teach Asian immigrants English and how to adapt to their lives in the U.S
+                  I love to give back to the community, and I've been part of many projects, such as: Swim with a Splash, International Food Drive, music events at senior centers and hospitals, etc.
                 </p>
               </div>
 
