--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@
             <li class="project-item  active" data-filter-item data-category="others">
               <a href="#">
 
-                  <img src="./assets/images/Activities/Community Service/food drive 2.jpg" width = "320" height = "240" alt="summary" loading="lazy"  image_list>
+                  <img src="./assets/images/Activities/Community Service/food_drive.png" width = "320" height = "240" alt="summary" loading="lazy"  image_list>
                 
                 <h3 class="project-title">Cincinnati AACO Youth Member (Asian-American Coalition of Ohio Youth Chapter) International Food Drive for the University of Cincinnati's Bearcats Pantry</h3>
                 <!--
