--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Education</h3>
+            <h3 class="h3">EDUCATION</h3>
           </div>
 
           <ol class="timeline-list">
@@ -607,7 +607,7 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Performing Arts</h3>
+            <h3 class="h3">PERFORMING ARTS</h3>
           </div>
 
           <ol class="timeline-list">
@@ -653,7 +653,7 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Sports</h3>
+            <h3 class="h3">SPORTS</h3>
           </div>
 
           <ol class="timeline-list">
@@ -792,7 +792,7 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Community Service</h3>
+            <h3 class="h3">COMMUNITY SERVICE</h3>
           </div>
 
           <ol class="timeline-list">
@@ -839,7 +839,7 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Other Interests</h3>
+            <h3 class="h3">OTHER INTERESTS</h3>
           </div>
 
           <ol class="timeline-list">
@@ -905,12 +905,12 @@
 
               <h4 class="h4 timeline-item-title"> Cub Scouts </h4>
 
-                <span> Pack 928 Member </span>
+                <span> 2018 - 2021 </span>
               
               <p class="timeline-text">
                 <ul class="resume-list">
                 <li class="resume-subList">
-                Completed the Tiger, Wolf, and Webelos ranks (Southlake, TX, 2018 - 2021)
+                Completed the Tiger, Wolf, and Webelos ranks as a member of Pack 928 (Southlake, TX)
               </li>
                 <span> </span>
               </ul>
