--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
 
         <section class="about-text">
           <p>
-            Hi! My name is Austin Yao. I live in Cincinnati, Ohio, and I go to Mason Middle School. I am in 7th grade, and I am 
-            13 years old. I'm a curious child, and I have many passions that I would like to share!
+            Hi! My name is Austin Yao. I live in Cincinnati, Ohio, and I go to Mason Middle School. I am 13 years old and in 7th grade. I'm a curious person, and I have many passions that I would like to share!
           </p>
 
         </section>
