--- a/index.html
+++ b/index.html
@@ -264,13 +264,10 @@
           - testimonials "testimonials-list has-scrollbar" "h3 testimonials-title"
         -->
 
-        <section class="testimonials">
+        <section class="service">
 
-          <h3 class="h3 service-title">Activities </h3>
-          <p>
+          <h3 class="h3 service-title" style="margin-bottom: 60px;">Activities </h3>
 
-
-          </p>
           <ul class="service-list">
 
             <li class="testimonials-item">
