--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/Austin Yao_Student Photo.jpg" alt="Austin Yao" width="80">
+          <img src="./assets/images/Austin_Yao.jpg" alt="Austin Yao" width="80">
         </figure>
 
         <div class="info-content">
