--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
 
         <section class="about-text">
           <p>
-            Hi! My name is Austin Yao. I live in Cincinnati, Ohio, and I go to Mason Middle School. I am 13 years old and in 7th grade. I'm a curious person, and I have many passions that I would like to share!
+            Hi! My name is Austin Yao. I live in Cincinnati, Ohio, and I go to Mason Middle School. I am 13 years old and in 7th grade. I'm a determined student who isn't afraid of tackling challenges - academically or socially.
+            Being heavily involved in community service, I enjoy initiating projects.
+            I'm a curious person, and I have many passions that I would like to share!
           </p>
 
         </section>
@@ -200,7 +202,7 @@
                 <h4 class="h4 service-item-title">Academics</h4>
 
                 <p class="service-item-text">
-                  I am an active participant in both Mathcounts and Science Bowl, having achieved qualification for the state level in Mathcounts.
+                  I am an active participant in both Mathcounts and Science Bowl, achieving qualification for the state competition in Mathcounts.
                 </p>
               </div>
 
@@ -216,7 +218,7 @@
                 <h4 class="h4 service-item-title">Sports</h4>
 
                 <p class="service-item-text">
-                  I have played many sports in my life, but I compete in swimming, basketball, and tennis.
+                  I have played many sports in my life, but I consistently compete in swimming, basketball, and tennis.
                 </p>
               </div>
 
@@ -232,7 +234,7 @@
                 <h4 class="h4 service-item-title">Performing Arts</h4>
 
                 <p class="service-item-text">
-                  I play the violin, and I am in the Cincinnati Junior Strings Orchestra
+                  I'm a violinist in the Cincinnati Junior Strings Orchestra.
                 </p>
               </div>
 
@@ -248,7 +250,7 @@
                 <h4 class="h4 service-item-title">Community Service</h4>
 
                 <p class="service-item-text">
-                  I love to give back to the community, and I've been part of many projects, such as: Swim with a Splash, International Food Drive, music events at senior centers and hospitals, etc.
+                  I love giving back to the community. I've been part of service projects such as the University of Cincinnati's International Food Drive, Swim with a Splash, and music events at senior centers and hospitals. I also designed a video for nonprofit EMBRACE.
                 </p>
               </div>
 
@@ -285,7 +287,7 @@
                   <p>
                   
                     I held a free “Swim with a Splash” event for my community because I had drastically improved in swimming, and 
-                    I wanted to help other kids become better too.There were many details I had to coordinate. I recruited a few peers to teach and assigned specific roles to avoid conflicts. Using Canva, I created a flyer for our community bulletin board and Facebook and also advertised by word of mouth. Using the information the parents had given to me on a Google form, I made individual lesson plans for each swimmer and assigned them to a coach according to the coach's strengths. We taught eleven kids over three days, confidently giving parents feedback after each lesson. The classes weren't easy, especially since one student was scared of water. It took two days to get him comfortable being in the pool, but he learned how to hold his breath underwater, which was a huge accomplishment. Later, his mom said that he now likes swimming and wants to take more lessons.
+                    I wanted to help other kids become better too. There were many details I had to coordinate. I recruited a few peers to teach and assigned specific roles to avoid conflicts. Using Canva, I created a flyer for our community bulletin board and Facebook and also advertised by word of mouth. Using the information the parents had given to me on a Google form, I made individual lesson plans for each swimmer and assigned them to a coach according to the coach's strengths. We taught eleven kids over three days, confidently giving parents feedback after each lesson. The classes weren't easy, especially since one student was scared of water. It took two days to get him comfortable being in the pool, but he learned how to hold his breath underwater, which was a huge accomplishment. Later, his mom said that he now likes swimming and wants to take more lessons.
                   
                   </p>
                 </div>
@@ -305,7 +307,7 @@
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
                     I've been playing violin since I was 6, and I enjoy being a member of an orchestra. I was selected twice for the OMEA District 13 Honor Orchestra, and made the 
-                    Cincinnati Junior Strings Orchestra this year. I also am a part of my school's orchestra, where I am playing in an 8th grade class, even though I am in 7th grade.
+                    Cincinnati Junior Strings Orchestra this year. I am also a part of my school's orchestra, where I am playing in an 8th grade class as a 7th grader.
                   </p>
                 </div>
 
@@ -345,9 +347,9 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Science is so fascinating. There are so many wonders of the world, and we continue to unviel new things every day. 
-                    I enjoy studying science, and it amazes me that there is so much to learn. As a child, I read books about black holes, 
-                    redshift, etc, and this prompted me to study Earth and Space on my Science Bowl Team.
+                    There are so many wonders of the world, and we continue to unveil new things every day. 
+                    I enjoy studying science, and it amazes me that there is so much to learn. As a child, I read many books about black holes, 
+                    redshift, and the Big Bang theory. This long-lasting interest prompted me to study Earth and Space on my Science Bowl team.
                   </p>
                 </div>
 
@@ -366,8 +368,7 @@
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
                     Swimming is my main sport, and I love it because you have to push yourself and be strong mentally.
-                    I've swam since I was 3, and I had the AAA time in 50 Yard Breastroke, and some AA and A times in the Short Course season.
-                    In the Long Course season, I have achieved a few AA and A times.
+                    I've swam since I was 3, and I had the AAA time in the 50-yard breastroke, and I have acheived AA and A times in both Long Course and Short Course seasons.
                   </p>
                 </div>
 
@@ -385,11 +386,10 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    I've played basketball since I was 7 years old. I also really enjoy watching the NBA, and it prompted me to want to 
-                    become a basketball player when I grow up. I am now interested in oncology, but basketball was a huge thing to me 
+                    I've played basketball since I was 7 years old. 
+                    I also enjoy watching the NBA, and I wanted to become a basketball player when I grew up. Now, my interest has switched to oncology, but basketball was a huge thing to me 
                     when I was little. My idol was Stephen Curry, and I always admired him for his grit and determination. Despite being 
-                    undersized and doubted by most scouts, he pushed on, and he is now one of the faces of the NBA. He inspired me, and 
-                    I strive to be better every day.
+                    undersized and doubted by most scouts, he pushed on, and he is now one of the faces of the NBA. He inspires me to try to be better every day.
                   </p>
                 </div>
 
@@ -407,9 +407,9 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    I've played tennis for 2-3 years, and I enjoy it a lot. I was able to get to T3 Junior, the second highest level 
-                    in Harper's Point, which is where I play tennis. I'm proud that I am able to get to this level of tennis in only a 
-                    few years, and it is something pretty difficult to do.
+                    I've played tennis for 2-3 years, and I enjoy it a lot. I play in T3 Junior, the second highest level 
+                    in Harper's Point, which is my tennis league. I'm proud that I have been able to get to this level of tennis in only a 
+                    few years.
                   </p>
                 </div>
 
@@ -1196,7 +1196,7 @@
 
                   <a href="https://www.youtube.com/shorts/s8MEV5LGutI"><img src="./assets/images/Activities/Community Service/food_drive.png" width = "320" height = "240" alt="summary" loading="lazy">
                   </a>
-                <h3 class="project-title">Cincinnati AACO Youth Member (Asian-American Coalition of Ohio Youth Chapter) International Food Drive for the University of Cincinnati's Bearcats Pantry</h3>
+                <h3 class="project-title"> International Food Drive for the University of Cincinnati's Bearcats Pantry</h3>
                 <!--
                   <p class="project-category">Web development</p>
                 -->
@@ -1208,7 +1208,7 @@
 
                   <a href="https://www.youtube.com/watch?v=3GJw5jXzEvs&list=PPSV"><img src="./assets/images/Activities/Community Service/chinese_teaching.png" width = "320" height = "240" alt="summary" loading="lazy">
                   </a>
-                <h3 class="project-title">Cincinnati AACO Youth Member (Asian-American Coalition of Ohio Youth Chapter) International Food Drive for the University of Cincinnati's Bearcats Pantry</h3>
+                <h3 class="project-title"> International Food Drive for the University of Cincinnati's Bearcats Pantry</h3>
                 <!--
                   <p class="project-category">Web development</p>
                 -->
@@ -1408,7 +1408,7 @@
                   <video width="320" height="240"  controls>
                     <source src="./assets/images/Activities/Performing Arts/Cjs Concert 2.mp4" type="video/mp4">
                  </video>
-                <h3 class="project-title"> University of Cincinnati College-Conservatory of Music (CCM) Junior Strings Orchestra concert at Corbett Auditorium in University of Cincinnati</h3>
+                <h3 class="project-title"> University of Cincinnati College-Conservatory of Music (CCM) Junior Strings Orchestra concert</h3>
                 <!--
                   <p class="project-category">Web design</p>
                 -->
