--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
 
                   <a href="https://www.youtube.com/watch?v=3GJw5jXzEvs&list=PPSV"><img src="./assets/images/Activities/Community Service/chinese_teaching.png" width = "320" height = "240" alt="summary" loading="lazy">
                   </a>
-                <h3 class="project-title"> International Food Drive for the University of Cincinnati's Bearcats Pantry</h3>
+                <h3 class="project-title"> Video for nonprofit EMBRACE </h3>
                 <!--
                   <p class="project-category">Web development</p>
                 -->
