--- a/index.html
+++ b/index.html
@@ -857,7 +857,9 @@
                 <li class="resume-subList">
                   North Texas Nadadores Swim Team
                   <span>Southlake, TX, March 2020 - July 2021</span>
-    
+                  <div>
+                  - Earned the NTN Coach Ambassador Award of 2020-2021
+                  </div>
               </li>
               </ul>
               </p>
