--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
                     Swimming is my main sport, and I love it because you have to push yourself and be strong mentally.
-                    I've swam since I was 3, and I had the AAA time in the 50-yard breastroke, and I have acheived AA and A times in both Long Course and Short Course seasons.
+                    I've swam since I was 3, and I had the AAA time in the 50-yard breastroke, and I have achieved AA and A times in both Long Course and Short Course seasons.
                   </p>
                 </div>
 
