--- a/index.html
+++ b/index.html
@@ -495,19 +495,26 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                  
-                    In gifted class, we played the stock market game, which lasted for three months. At first, my partner and I were 
-                    cautious. When we wanted to invest in a stock, we'd watch it for a while before spending any money, and if our shares
-                     took a dip, we'd sell them immediately to avoid loss. However, we weren't making very much profit. We decided to 
-                     take some risks. We targeted tech companies, such as ASML and NVDA, because people got addicted to video games 
-                     during Covid. Also, we bought Merck & Co's stock, because they had just introduced a skin cancer vaccine, which 
-                     was something novel. I remember celebrating with my partner as ASML grew a historic $70 in a single day. Even though
-                      we started slow and sometimes lost money, we learned quickly and watched some of our stocks skyrocket in the final 
-                      days. Surprisingly, with only two people, we placed 2nd out of all our school teams. This experience was 
-                      fascinating and made me feel confident about investing in the future. Today, I continue to invest in the stock 
-                      market, and one of my stocks has grown by 20%!
+                  <ul class="resume-list">
+                    <li>
+                      &nbsp &nbsp &nbsp &nbsp &nbsp In gifted class, we played the stock market game, which lasted for three months. At first, my partner and I were 
+                      cautious. When we wanted to invest in a stock, we'd watch it for a while before spending any money, and if our shares
+                      took a dip, we'd sell them immediately to avoid loss. However, we weren't making very much profit.
+                    </li>
+                    <li>
+                      &nbsp &nbsp &nbsp &nbsp &nbsp We decided to take some risks. We targeted tech companies, such as ASML and NVDA, because people got addicted to video games 
+                    during Covid. Also, we bought Merck & Co's stock, because they had just introduced a skin cancer vaccine, which 
+                    was something novel. I remember celebrating with my partner as ASML grew a historic $70 in a single day. Even though
+                    we started slow and sometimes lost money, we learned quickly and watched some of our stocks skyrocket in the final 
+                    days.
+                    </li>
+                    <li>
+                      &nbsp &nbsp &nbsp &nbsp &nbsp Surprisingly, with only two people, we placed 2nd out of all our school teams. This experience was 
+                    fascinating and made me feel confident about investing in the future. Today, I continue to invest in the stock 
+                    market, and one of my stocks has grown by 20%!
+                    </li>
+                  </ul>
 
-                  
                   </p>
                 </div>
 
@@ -552,6 +559,111 @@
                     wanting to find her a good home. Nothing. We decided to adopt her, and we were happy. Later, we adopted Rockette, 
                     who is younger, to make sure Mi Mi is always entertained. Rockette was found underneath a trailer, and she was 
                     brought to PetSmart, which is where we got her. 
+                  </p>
+                </div>
+
+              </div>
+            </li>
+
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
+
+                <figure class="testimonials-avatar-box">
+                  <img src="./assets/images/cat.jpg" alt="Jessica miller" width="60" height="60" data-testimonials-avatar>
+                </figure>
+
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Rubik's Cube</h4>
+
+                <div class="testimonials-text" data-testimonials-text>
+                  <p>
+                    When I started playing with the Rubik's cube, I was able to quickly understand how to solve it after watching a few 
+                    videos. I enjoy problem solving, and the Rubik's cube brought me a challenge. I love to learn new things, so I 
+                    decided to take it head on. I am happy that I can solve a Rubik's cube, and it is a fun activity I can do when I am 
+                    bored. 
+                  </p>
+                </div>
+
+              </div>
+            </li>
+
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
+
+                <figure class="testimonials-avatar-box">
+                  <img src="./assets/images/cat.jpg" alt="Jessica miller" width="60" height="60" data-testimonials-avatar>
+                </figure>
+
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Video Game</h4>
+
+                <div class="testimonials-text" data-testimonials-text>
+                  <p>
+                    I enjoy watching the NBA, and I was soon hooked to the idea of a basketball game called NBA 2k Mobile. I was able to 
+                    pretend as if I was in the game, using my favorite players to try to win games. I felt extremely accomplished when 
+                    I was able to reach a high power, and it is a great way for me to relax after a long day.  
+                  </p>
+                </div>
+
+              </div>
+            </li>
+
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
+
+                <figure class="testimonials-avatar-box">
+                  <img src="./assets/images/cat.jpg" alt="Jessica miller" width="60" height="60" data-testimonials-avatar>
+                </figure>
+
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Family</h4>
+
+                <div class="testimonials-text" data-testimonials-text>
+                  <p>
+                    <ul class="resume-list">
+                      <li>
+                        &nbsp&nbsp&nbsp&nbsp&nbsp I live with my parents, sister, and grandma, and one of my favorite family traditions 
+                        is Chinese New Year because our family gets to bond and celebrate the start of a new year. One of the special 
+                        activities we look forward to the most is watching the CCTV Spring Festival Gala. I love the feeling of 
+                        togetherness that we have when we pile on the couch to enjoy the skits, singing, and shows broadcasted from 
+                        China. The performances are amazing, and we even watch reruns of previous years because it is so fascinating.
+                      </li>
+                      <li>
+                        &nbsp&nbsp&nbsp&nbsp&nbsp We also eat delicious food: dumplings, noodles, spring rolls, and many other 
+                        traditional dishes. We laugh and talk as we eat, and discuss the new zodiac animal for the coming year. 
+                        (For instance, 2023 is the Year of the Rabbit.) After dinner comes my favorite part: the red envelopes. 
+                        Every Chinese New Year, the adults give the kids fancy red envelopes with money inside. This is an old tradition,
+                        and by giving the envelopes, you are wishing the receiver good luck and prosperity. We also dress up in red 
+                        and record greetings for our friends and family.
+                      </li>
+                      <li>
+                        &nbsp&nbsp&nbsp&nbsp&nbsp My family taught me to be compassionate and help those in need, so when I saw a kid 
+                        who was alone at a tennis camp who came from South Korea to the US to study American tennis, I asked for his 
+                        name, but he didn't speak English. It was hard to communicate, but we figured it out. Under my guidance, he 
+                        became more outgoing and fun and quickly made a lot of friends. I was happy for him and felt sad when he went 
+                        back to South Korea.
+                      </li>
+                    </ul>
+                  </p>
+                </div>
+
+              </div>
+            </li>
+
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
+
+                <figure class="testimonials-avatar-box">
+                  <img src="./assets/images/cat.jpg" alt="Jessica miller" width="60" height="60" data-testimonials-avatar>
+                </figure>
+
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Family</h4>
+
+                <div class="testimonials-text" data-testimonials-text>
+                  <p>
+                    I have 2 cats, Mi Mi (pronunciation: Mee - Mee) and Rockette. It was a cold, gray morning when we first encountered 
+                    Mi Mi, who was a stray cat. We fed her, and she hung around our house. It was starting to get colder, and we had 
+                    concerns that Mi Mi wouldn't be able to survive under these bitter conditions, so we brought her from shelter to 
+                    shelter, wanting to find her a good home. We couldn't find the owner and the shelter didn't want her, so we decided
+                     to adopt her, and we were happy. Later, we adopted Rockette, who is 6 months old to make sure Mi Mi has a friend. 
+                     Rockette was found underneath a trailer, and she was brought to PetSmart, which is where we got her.
                   </p>
                 </div>
 
