--- a/index.html
+++ b/index.html
@@ -384,15 +384,15 @@
                       <li>
                         In my group, we had lettered lanes: A, B, C, and D, with D being the slowest. 
                         I would always go to the C lane, but my coach pushed me out of my comfort zone and moved me to the A lane. Later, 
-                        during the goal meeting, my coach inspired me again, and I became determined to become a better swimmer. From then 
-                        on, I took every practice seriously and never wanted to skip. 
+                        during the goal meeting, my coach inspired me, and I became determined to become a better swimmer. From then 
+                        on, I took every practice seriously and never wanted to skip. In fact, I was reluctant to go on vacation because 
+                        I loved practice so much!
                       </li>
                       <br>
                       <li>
-                       I ended up the 2nd fastest swimmer in the group. In fact, I was reluctant to go on
-                        vacation because I loved practice so much! Previously, I had rushed through the drills, but now I went slowly to 
-                        work on my technique. During the Long Course season, my swimming propelled forward, and I moved to the fastest 
-                        group for my age and made every single Junior Championship cut for state!
+                        Previously, I had rushed through the drills, but now I went slowly to work on my technique. Eventually, my 
+                        swimming propelled forward, and I moved to the fastest group for my age and made every single Junior Championship 
+                        cut for state in the Long Course season!
                       </li>
                     </ul>
                   </p>
