Update splash video
Update splash video

--- a/index.html
+++ b/index.html
@@ -1440,7 +1440,7 @@
 
 
                   <video width="320" height="240"  controls>
-                    <source src="./assets/images/Activities/Community Service/Swim With A Splash 082023.mp4" type="video/mp4">
+                    <source src="./assets/images/Activities/Community Service/Swim With A Splash.mp4" type="video/mp4">
                  </video>
                 <h3 class="project-title">Swim With A Splash - Free Private Swimming Lessons</h3>
                 
